fixed white space underneath banner

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1528,7 +1528,7 @@ a.logo.dark:hover{
 }
 .service-item{
 	height: 250px;
-	margin: 20px 0 0px;
+	margin: 20fpx 0 0px;
 	position: relative;
 	text-align: center;
 	cursor: pointer;
